[package]
name = "oneshell"
version = "0.1.0"
authors = ["losfair <zhy20000919@hotmail.com>"]
description = "OneShell"
license = "LGPL-3.0"
repository = "https://github.com/losfair/OneShell"

[lib]
name = "oneshell"
crate-type = ["cdylib"]

[dependencies]
cervus = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
backtrace = "0.3"
